--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://Himanshur25.github.io/job-portal",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@sanity/client": "^4.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -13,10 +14,13 @@
     "jest-worker": "^29.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "recoil": "^0.7.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "eslint": "^8.57.1",
+    "gh-pages": "^6.2.0"
   }
 }
